--- a/test-output/index.html
+++ b/test-output/index.html
@@ -103,7 +103,7 @@
                     <div class="method-list-content passed suite-Master_Suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Master_Suite" title="testCases.TC_SF_010" class="method navigator-link" hash-for-method="validateTC_SF_010">validateTC_SF_010</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Master_Suite" title="testCases.TC_SF_014" class="method navigator-link" hash-for-method="validateProductSort">validateProductSort</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Master_Suite -->
@@ -121,14 +121,14 @@
           <div class="suite-Master_Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">testCases.TC_SF_010</span>
+              <span class="class-name">testCases.TC_SF_014</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="validateTC_SF_010">
-                  </a> <!-- validateTC_SF_010 -->
-                  <span class="method-name">validateTC_SF_010</span>
+                  <a name="validateProductSort">
+                  </a> <!-- validateProductSort -->
+                  <span class="method-name">validateProductSort</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -150,7 +150,7 @@
     &lt;parameter name=&quot;os&quot; value=&quot;Windows&quot;/&gt;
     &lt;parameter name=&quot;browser&quot; value=&quot;chrome&quot;/&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;testCases.TC_SF_010&quot;/&gt;
+      &lt;class name=&quot;testCases.TC_SF_014&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Test --&gt;
 &lt;/suite&gt; &lt;!-- Master Suite --&gt;
@@ -178,7 +178,7 @@
               <span class="test-group-name">master</span>
               <br/>
               <div class="method-in-group">
-                <span class="method-in-group-name">validateTC_SF_010</span>
+                <span class="method-in-group-name">validateProductSort</span>
                 <br/>
               </div> <!-- method-in-group -->
             </div> <!-- test-group -->
@@ -200,9 +200,9 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'validateTC_SF_010')
-data.setCell(0, 2, 'testCases.TC_SF_010')
-data.setCell(0, 3, 1831);
+data.setCell(0, 1, 'validateProductSort')
+data.setCell(0, 2, 'testCases.TC_SF_014')
+data.setCell(0, 3, 1429);
 window.suiteTableData['Master_Suite']= { tableData: data, tableDiv: 'times-div-Master_Suite'}
 return data;
 }
@@ -233,18 +233,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">testCases.TC_SF_010</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">testCases.TC_SF_014</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">setup(Windows, chrome)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">validateTC_SF_010</span>
-                <span class="method-start">4464 ms</span>
+                <span class="method-name">validateProductSort</span>
+                <span class="method-start">2691 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">6333 ms</span>
+                <span class="method-start">4148 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
